<package>
  <name>turtlebot_apps</name>
  <version>3.0.2</version>
  <description>
      turtlebot_apps is a group of simple demos and exmaples to run on your TurtleBot to help you get started with ROS and TurtleBot.
  </description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_apps</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_apps</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_apps/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>turtlebot_actions</run_depend>
  <run_depend>turtlebot_calibration</run_depend>
  <run_depend>turtlebot_rapps</run_depend>
  <run_depend>turtlebot_follower</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <!--run_depend>turtlebot_panorama</run_depend-->

  <export>
    <metapackage/> 
  </export>
</package>
