<package>
  <name>turtlebot_teleop</name>
  <version>3.0.1</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_teleop</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>
  
  <author email="mwise@willowgarage.com">Melonee Wise</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
</package>
