<?xml version="1.0"?>
<package>
  <name>uol_turtlebot_common</name>
  <version>0.1.1</version>
  <description>The uol_turtlebot_common package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marc@todo.todo">marc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/uol_turtlebot_common</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot_actions</build_depend>
  <build_depend>turtlebot_bringup</build_depend>
  <build_depend>turtlebot_core_apps</build_depend>
  <build_depend>turtlebot_dashboard</build_depend>
  <build_depend>turtlebot_msgs</build_depend>
  <build_depend>turtlebot_navigation</build_depend>
  <build_depend>turtlebot_rviz_launchers</build_depend>
  <build_depend>uol_morse_simulator</build_depend>
  <run_depend>turtlebot_actions</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_core_apps</run_depend>
  <run_depend>turtlebot_dashboard</run_depend>
  <run_depend>turtlebot_msgs</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_rviz_launchers</run_depend>
  <run_depend>uol_morse_simulator</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>