<?xml version="1.0"?>
<package>
  <name>uol_turtlebot_simulator</name>
  <version>1.0.0</version>
  <description>The uol_turtlebot_simulator package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/LCAS/teaching</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>turtlebot_apps</run_depend>
  <run_depend>turtlebot_rviz_launchers</run_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_stdr</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <build_depend>turtlebot_apps</build_depend>
  <build_depend>turtlebot_rviz_launchers</build_depend>
  <build_depend>turtlebot_gazebo</build_depend>
  <build_depend>turtlebot_stdr</build_depend>
  <build_depend>kobuki_gazebo_plugins</build_depend>

  <export/>
</package>
