<?xml version="1.0"?>
<package>
  <name>uol_turtlebot_simulator</name>
  <version>3.0.2</version>
  <description>The uol_turtlebot_simulator package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/LCAS/teaching</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_stdr</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>turtlebot_gazebo</build_depend>
  <build_depend>turtlebot_stdr</build_depend>
  <build_depend>kobuki_gazebo_plugins</build_depend>

  <export/>
</package>
