<?xml version="1.0"?>
<package>
  <name>uol_turtlebot_simulator</name>
  <version>3.0.2</version>
  <description>The uol_turtlebot_simulator package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/LCAS/teaching</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <run_depend>turtlebot3_gazebo</run_depend>
  <run_depend>turtlebot3_navigation2</run_depend>
  <run_depend>turtlebot3_teleop</run_depend>
  <run_depend>rviz2</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>turtlebot3_gazebo</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
